src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_return.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
main:
  load.w %r0, $1  # span 0..1 "1"
  load.w %r0, $2  # span 10..11 "2"
  jmp ret_exit
  load.w %r0, $3  # span 13..14 "3"
ret_exit:
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
