src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_shifts.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  jmp main
main:
  load.w %r0, $1  # span 10..11 "1"
  push.w %r0
  load.w %r0, $2  # span 19..20 "2"
  push.w %r0
  load.w %r0, 8(%sp)  # span 13..20 "a<<=2"
  pop.w %r1
  shl.w %r0, %r1  # span 13..20 "a<<=2"
  store.w %r0, 0(%sp)  # span 13..20 "a<<=2"
  load.w %r0, $1  # span 27..28 "1"
  push.w %r0
  load.w %r0, 8(%sp)  # span 22..23 "a"
  pop.w %r1
  sar.w %r0, %r1  # span 22..28 "a>>1"
  pop.w %r15
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
