src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_statements.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  jmp main
main:
  load.w %r0, $1  # span 1..2 "1"
  load.w %r0, $3  # span 5..6 "3"
  push.w %r0
  load.w %r0, $2  # span 3..4 "2"
  pop.w %r1
  add.w %r0, %r1  # span 3..6 "2+3"
  load.w %r0, $4  # span 7..8 "4"
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
