src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_string_literal.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  movi %r0, $12
  xor.w %r1, %r1
  trap
  mov %r12, %r0
  jmp main
main:
  mov %r1, %r12  # span 2..6 ""hi""
  mov.w %r2, %r12
  load.w %r0, $2
  add.w %r2, %r0
  movi %r0, $12
  mov.w %r1, %r2
  trap
  mov.w %r12, %r2
  load.w %r0, $104
  store.b %r0, 0(%r1)  # span 2..6 ""hi""
  load.w %r0, $105
  store.b %r0, 1(%r1)  # span 2..6 ""hi""
  mov.w %r0, %r1
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
