src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_unary_minus.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
main:
  load.w %r0, $5  # span 2..3 "5"
  neg.w %r0  # span 1..3 "-5"
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
