src/pagoda/snapshots/todaiji__pagoda__bytecode__tests__emits_variables.snap
---
source: src/pagoda/bytecode.rs
expression: output
---
  movi %r0, $12
  xor.w %r1, %r1
  trap
  mov %r12, %r0
  jmp main
main:
  load.w %r0, $2  # span 11..12 "2"
  push.w %r0
  load.w %r0, $1  # span 9..10 "1"
  pop.w %r1
  add.w %r0, %r1  # span 9..12 "1+2"
  push.w %r0
  load.w %r0, $3  # span 16..17 "3"
  push.w %r0
  load.w %r0, 8(%sp)  # span 14..15 "x"
  pop.w %r1
  mul.w %r0, %r1  # span 14..17 "x*3"
  pop.w %r7
  push.w %r0
  pop.w %r1
  movi %r0, $60
  trap
